<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/comment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        style="@style/titleH1"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/comment_recycler"
        android:layout_below="@id/comment_label"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_recycler_height" />

    <TextView
        android:id="@+id/empty_message"
        android:layout_below="@id/comment_label"
        android:text="@string/emptyComments"
        style="@style/emptyMessage"/>

</RelativeLayout>